--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,7 @@ dependencies {
 
     //grafik
     implementation 'com.github.AnyChart:AnyChart-Android:1.1.2'
+
+    //ProgressBar
+    implementation 'net.bohush.geometricprogressview:geometricprogressview:1.1.1'
 }
